# BidCopilot

./: .env.example  .gitignore  ARCHITECTURE.md  pyproject.toml  version.json
.claude/: settings.local.json
bidcopilot/: __main__.py  config.py  main.py  scheduler.py
bidcopilot/application/: document_uploader.py  engine.py  form_extractor.py  form_filler.py  question_answerer.py  submitter.py
bidcopilot/auth/: client.py  middleware.py
bidcopilot/browser/: anti_detection.py  captcha_solver.py  human_input.py  manager.py  proxy_manager.py  session_store.py
bidcopilot/core/: database.py  events.py  exceptions.py  models.py  worker_pool.py
bidcopilot/discovery/: base_adapter.py  config.py  engine.py  source_expander.py  source_registry.py
bidcopilot/discovery/adapters/: __init__.py  arbeitnow.py  ashby.py  generic_career.py  greenhouse.py  himalayas.py  hn_hiring.py  jobicy.py  jobright.py  lever.py  reed.py  remoteok.py  remotive.py  weworkremotely.py  workday.py
bidcopilot/matching/: engine.py  prompts.py  skills_taxonomy.py
bidcopilot/notifications/: engine.py
bidcopilot/notifications/channels/: discord.py  email.py  slack.py  webhook.py
bidcopilot/profile/: manager.py  schemas.py
bidcopilot/reporting/: analytics.py  dashboard.py
bidcopilot/reporting/templates/: admin.html  autobid.html  base.html  (+5 more)
bidcopilot/resume_integration/: client.py  contracts.py  fallback.py
bidcopilot/utils/: crypto.py  logging.py  retry.py
config/: discovery.yaml  profile.yaml  settings.yaml  settings.yaml.example
scripts/: bump-version.sh
tests/: conftest.py
(+9 files in other folders)
