[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bidcopilot"
version = "0.1.0"
description = "Automated job application system"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "litellm>=1.30.0",
    "instructor>=1.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
scheduler = [
    "apscheduler>=3.10.0",
]
captcha = [
    "2captcha-python>=1.2.0",
]

[project.scripts]
bidcopilot = "bidcopilot.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"
